--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@abcnews/react-globe",
+  "name": "react-globe",
   "version": "1.0.6",
   "description": "A configurable 3D globe for React",
-  "homepage": "https://github.com/abcnews/react-globe#readme",
+  "homepage": "https://github.com/bradysheridan/react-globe#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/abcnews/react-globe.git"
+    "url": "https://github.com/bradysheridan/react-globe.git"
   },
   "bugs": {
-    "url": "https://github.com/abcnews/react-globe/issues"
+    "url": "https://github.com/bradysheridan/react-globe/issues"
   },
   "main": "lib/index.js",
   "scripts": {
